Fix slider content z-index issue

--- a/assets/css/omexer-insight.css
+++ b/assets/css/omexer-insight.css
@@ -41,6 +41,11 @@ input[type="submit"] {
     position: relative
 }
 
+.slider-content{
+    position: relative;
+    z-index: 99;
+}
+
 .slider-content.image {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 60%;
